log
Fri 23 Sep 2022 11:43:14 AM UTC: 
 tests:  1|8
total_score: 0/70
03b8ea7
Fri 23 Sep 2022 12:01:11 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:6: error: ‘current’ undeclared (first use in this function)
   42 |   if(current!=NULL){
      |      ^~~~~~~
treemap.c:42:6: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: ‘aux’ undeclared (first use in this function)
   79 |     aux = tree->root;
      |     ^~~
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
97702cb
Fri 23 Sep 2022 12:01:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: ‘aux’ undeclared (first use in this function)
   79 |     aux = tree->root;
      |     ^~~
treemap.c:79:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
c025443
Fri 23 Sep 2022 12:01:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: unknown type name ‘aux’
   79 |     aux* = tree->root;
      |     ^~~
treemap.c:79:10: error: expected identifier or ‘(’ before ‘=’ token
   79 |     aux* = tree->root;
      |          ^
treemap.c:80:11: error: ‘aux’ undeclared (first use in this function)
   80 |     while(aux->key < )
      |           ^~~
treemap.c:80:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
cecfe63
Fri 23 Sep 2022 12:05:53 PM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:5: error: unknown type name ‘aux’
   76 |     aux* = tree->root;
      |     ^~~
treemap.c:76:10: error: expected identifier or ‘(’ before ‘=’ token
   76 |     aux* = tree->root;
      |          ^
treemap.c:77:11: error: ‘aux’ undeclared (first use in this function)
   77 |     while(aux->key < )
      |           ^~~
treemap.c:77:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:22: error: expected expression before ‘)’ token
   77 |     while(aux->key < )
      |                      ^
Compilation failed
ce7111b
Fri 23 Sep 2022 12:06:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:14: error: ‘TreeNode’ has no member named ‘key’
   77 |     while(aux->key < )
      |              ^~
treemap.c:77:22: error: expected expression before ‘)’ token
   77 |     while(aux->key < )
      |                      ^
Compilation failed
89ba7a5
Fri 23 Sep 2022 12:07:00 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:15: error: unused variable ‘aux’ [-Werror=unused-variable]
   76 |     TreeNode *aux = tree->root;
      |               ^~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ae5e0a9
Fri 23 Sep 2022 12:07:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c58da8d
Fri 23 Sep 2022 12:12:22 PM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c69686d
Fri 23 Sep 2022 12:13:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |     return aux;
      |            ^~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
7b4c6ff
Fri 23 Sep 2022 12:13:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606: error: control reaches end of non-void function [-Werror=return-type]
  606 | }
      | 
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6506d57
Fri 23 Sep 2022 12:13:40 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:12: error: ‘aux’ undeclared (first use in this function)
   86 |     return aux->pair;
      |            ^~~
treemap.c:86:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4470df9
Fri 23 Sep 2022 12:14:37 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
09247c6
Fri 23 Sep 2022 12:15:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
349f732
Fri 23 Sep 2022 12:16:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:36: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |   if(aux->pair->key == key) return aux;
      |                                    ^~~
cc1: all warnings being treated as errors
Compilation failed
b3354b3
Fri 23 Sep 2022 12:17:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7e46182
Fri 23 Sep 2022 12:17:39 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:6: error: ‘aux’ undeclared (first use in this function)
   76 |   if(aux->pair->key == key) return aux->pair;
      |      ^~~
treemap.c:76:6: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0d8223c
Fri 23 Sep 2022 12:18:05 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0b579b9
Fri 23 Sep 2022 12:18:49 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
e09b28c
Fri 23 Sep 2022 12:20:46 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
15bf04d
